2021-09-14  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.7
	* Update UnQLite source code
	  - Renamed pgno field into iPage
	  - Fix Json-Tokenizer doesn't work with negative numbers

2021-04-25  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.6
	* Update UnQLite source code

2021-01-06  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.5
	* Update UnQLite source code

2018-04-29  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.4
	* Update UnQLite version to 1.1.9

2018-01-23  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.3
	* Update UnQLite version to 1.1.8

2017-12-05  Danilo Chang  <ray2501@gmail.com>

	* generic/unqlite.c: close va_list with va_end

2017-01-15  Danilo Chang  <ray2501@gmail.com>

	* generic/tclunqlite.c: update year

2017-01-11  Danilo Chang  <ray2501@gmail.com>

	* Update TEA files

2016-12-05  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.2

2016-12-02  Danilo Chang  <ray2501@gmail.com>

	* Update UnQLite version to 1.1.7

2016-10-23  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3.1
	* Avoid va_arg read if it is last (merge UnQLite code)

2016-09-21  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.3

2016-09-15  Danilo Chang  <ray2501@gmail.com>

	* merge code to fix bug (port bug fixes from vedis)
	* enable multi-thread mutex for memory allocation, fix page ref bug
	* change create and exists collection logic
	* identify null and empty string of json value

2016-09-13  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.2.8
	* Add doc_update_record method
	* Update UnQLite source code: add db_record_update method

2016-03-04  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.2.7
	* Fix CURSOR getkey potential issue
	* Add related test cases
	* Add Tcl_GetIntFromObj() error check

2016-02-20  Danilo Chang  <ray2501@gmail.com>

	* Set version to v0.2.6
	* Update DBNAME config command Tcl_WrongNumArgs string