@@ -1,3 +1,7 @@
+2022-09-16  Danilo Chang  <ray2501@gmail.com>
+
+	* Update UnQLite source code
+
 2021-09-14  Danilo Chang  <ray2501@gmail.com>
 
 	* Set version to v0.3.7
